--- a/create_genres_table.ipynb
+++ b/create_genres_table.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "4                               John Carter           6.1        2124  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
        "4   49529  [{\"id\": 28, \"name\": \"Action\"}, {\"id\": 12, \"nam..."
       ]
      },
-     "execution_count": 4,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,14 +404,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Manel Maria Pinto\\AppData\\Local\\Temp\\ipykernel_20768\\1903215942.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\Manel Maria Pinto\\AppData\\Local\\Temp\\ipykernel_12312\\1903215942.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -483,7 +483,7 @@
        "4   49529  [(28, Action), (12, Adventure), (878, Science ..."
       ]
      },
-     "execution_count": 7,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Manel Maria Pinto\\AppData\\Local\\Temp\\ipykernel_20768\\2687747506.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\Manel Maria Pinto\\AppData\\Local\\Temp\\ipykernel_12312\\2687747506.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
        "4  None  None  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +891,7 @@
        "4  NaN  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1076,7 @@
        "4              NaN   NaN   NaN    NaN    NaN    NaN    NaN  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1221,7 +1221,7 @@
        "4     NaN     NaN  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1353,7 +1353,7 @@
        "4                  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1364,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1375,12 +1375,14 @@
     " 'production_countries',\n",
     " 'spoken_languages',\n",
     " 'tagline'], axis=1, inplace=True) # Dropping unneeded columns\n",
+    "movies_df = movies_df.rename(columns= {\"id\" : \"movie_id\"})\n",
+    "genres_df3 = genres_df3.rename(columns= {\"id\" : \"movie_id\"})\n",
     "movies_df.to_csv(\"clean_data/movies.csv\", index = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
